--- a/style/style.css
+++ b/style/style.css
@@ -340,6 +340,11 @@ blockquote {
   background: #79dad6;
   margin-top: 10px; }
 
+p a {
+  color: #f07f84; }
+  p a:visited {
+    color: #79dad6; }
+
 button, input[type="submit"] {
   border: none;
   -webkit-box-shadow: none;
@@ -403,7 +408,8 @@ header {
   flex-wrap: nowrap;
   position: relative;
   background: white;
-  z-index: 10; }
+  position: relative;
+  z-index: 100; }
   @media (max-width: 700px) {
     header {
       -webkit-flex-wrap: wrap;
@@ -447,12 +453,12 @@ header .nav__main {
   justify-content: flex-start;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -webkit-flex-flow: row no-wrap;
-  -ms-flex-flow: row no-wrap;
-  flex-flow: row no-wrap; }
+  -webkit-flex-flow: row nowrap;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap; }
   @media (max-width: 700px) {
     header .nav__main {
-      width: 100vw;
+      width: 50vw;
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -webkit-flex-flow: column wrap;
@@ -467,7 +473,7 @@ header .nav__main {
 
 @media (max-width: 700px) {
   header > div:nth-of-type(2) {
-    width: 100%;
+    width: 50vw;
     display: inline;
     -webkit-box-ordinal-group: -1;
     -webkit-order: -2;
@@ -512,10 +518,12 @@ header > div:last-of-type {
 #toggle {
   display: none; }
 
-label[for="toggle"] img {
-  width: 24px;
-  height: 24px;
-  display: inline-block; }
+label[for="toggle"] {
+  cursor: pointer; }
+  label[for="toggle"] img {
+    width: 24px;
+    height: 24px;
+    display: inline-block; }
 
 form.search {
   background: white;
@@ -676,7 +684,8 @@ form input {
 
 @media (max-width: 700px) {
   header.wrapper {
-    width: 100%; } }
+    width: 100%;
+    max-height: initial; } }
 
 .visuallyHidden {
   border: 0;
@@ -709,34 +718,22 @@ img {
     margin-top: 112px; } }
 
 .hero {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.4)), to(rgba(255, 255, 255, 0.4))), url("../assets/hero.jpg");
-  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url("../assets/hero.jpg");
-  background: -o-linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url("../assets/hero.jpg");
-  background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url("../assets/hero.jpg");
-  min-height: 500px;
-  background-size: cover;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  text-align: center;
   position: relative; }
 
+.hero-carousel {
+  position: absolute;
+  top: 0;
+  background-size: cover;
+  height: 100%; }
+
+.carousel-cell {
+  width: 100%; }
+  .carousel-cell img {
+    -o-object-fit: cover;
+    object-fit: cover;
+    min-height: 70vh; }
+
 .wrap--hero {
-  margin: 50px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -754,36 +751,18 @@ img {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  text-align: center; }
-
-.fa.fa-arrow-left, .fa.fa-arrow-right {
-  font-size: 2rem;
-  color: #888890;
-  font-weight: 400;
-  position: absolute; }
-  .fa.fa-arrow-left:hover, .fa.fa-arrow-left:focus, .fa.fa-arrow-right:hover, .fa.fa-arrow-right:focus {
-    color: #000; }
-
-.fa.fa-arrow-left {
-  left: 10px; }
-
-.fa.fa-arrow-right {
-  right: 10px; }
-
-.carouselNav {
+  text-align: center;
   position: absolute;
-  bottom: 10px; }
-
-.indicatorDot {
-  width: 12px;
-  height: 12px;
-  background: black;
-  border-radius: 50%;
-  margin: 5px;
-  display: inline-block; }
-
-.indicatorDot.active {
-  background: #888890; }
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  z-index: 10;
+  width: 70%; }
+  @media (max-width: 500px) {
+    .wrap--hero {
+      width: 90%; } }
 
 /*----------------------------------------
     Section - categories
@@ -835,7 +814,8 @@ img {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  text-align: center; }
+  text-align: center;
+  padding: 60px 0; }
 
 .wrap--overlayText {
   padding: 1rem 2rem;
